  - compiled with MSVC. Minor changes: changed int to bool in some places.
    tkenv.dsp added. NOTE: one has to rename all .cc files  to .cpp
    for compiling (ren *.cc *.cpp)!
Dec 5,1999
  - Makefile.vc added
  - prints a banner line into main window before calling finish() on modules
    TBD: should print it into per-module windows too
Jan 9,2000
  - small modification to TOmnetTkApp's constructor
Jan 15,2000
  - OmnetTkApp::setup() reorganized
Jan 17-18,2000
  - bugfix in OmnetTkApp::objectDeleted() (tkapp.cc)
  - edited error msgs in tkapp.cc
  - font settins updated for Tk8.2/Win in main.tcl
  - in dialogs.tcl, added back the grab for the STOP dialog of Express Run mode.
    (Those lines got commented out long ago for some reason...) Under win32,
    the app menu is still accessible despite the grab (Tk bug?).
------ omnetpp-2.0b3 released ------
Mar 26, 2000
 - 'char *' pointers made const-correct (lots of 'char *' --> 'const char *'
   replacements throughout the code)
April 4-10, 2000
 - dynamic registration of user interface (TOmnetApp) classes introduced:
   Register_OmnetApp() macro added to tkapp.cc
 - changes to enable linking a Windows DLL from the library
 - adjustments because of TOmnetApp constructor changes
 - added tkenvDummy()/envirDummy(): functions which can/should be called from
   Envir in order to force the linker to include the Tkenv library into the
   executable. (These functions do absolutely nothing.)
Apr 10, 2000
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
   (eliminated a lot of gcc -Wall warnings)
Apr 13, 2000
 - code for Express Run (runSimulationNoTracing()) modified so that it prints
   module output (ev<<...) for the finish() functions [suggested by Niko]
May 5, 2000
 - implemented module parameter substitution in display strings (like
   "p=$x_pos,$y_pos"). Substitution still not supported in connection display
   strings.