@@ -354,3 +354,6 @@ May 5, 2000
  - implemented module parameter substitution in display strings (like
    "p=$x_pos,$y_pos"). Substitution still not supported in connection display
    strings.
+ - setDisplayString() now takes effect during simulation execution. Tkenv now
+   also handles the new 'immediate' argument to setDisplayString().
+
